@@ -67,7 +67,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © Michal Josef Špaček 2020
+    © Michal Josef Špaček 2020-2021
 
     BSD 2-Clause License
 
