@@ -1,4 +1,5 @@
 0.07
+ - Update copyright years.
 
 0.06 2021-01-14T18:43:21+01:00
  - Fix doc in Lexeme.
